--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>BCT Clash Test Report</title>
+    <title>PLAT B Clash Test Report</title>
     <style>
         body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
         h1.main-header { text-align: center; color: #222; margin-bottom: 40px; font-size: 32px; }
@@ -48,7 +48,29 @@
     </script>
 </head>
 <body>
-<h1 class='main-header'>PLOT Bnwf Clash Test Report (2564)</h1>
+<h1 class="main-header">
+    <img src="logo.png" alt="Company Logo" class="logo">
+    PLAT B Clash Test Report (2613)
+</h1>
+
+<style>
+    .main-header {
+        text-align: center;
+        color: #222;
+        margin-bottom: 40px;
+        font-size: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .main-header .logo {
+        height: 50px;
+        width: auto;
+        margin-right: auto; 
+    }
+</style>
 <div class='category'>
   <div class='category-header'>
     <span class='test-name'>AR&amp;SR VS (MECH &amp; ELEC) (Hard 1mm - Complete)</span>
