--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <h1 class="main-header">
-    <img src="logo.png" alt="Company Logo" class="logo">PLAT B Clash Test Report (2613)</h1>
+    <img src="logo.png" >PLAT B Clash Test Report (2613)</h1>
 <style>
     .main-header {
         text-align: center;
