--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>PLAT B Clash Test Report</title>
+    <title>PLOT B Clash Test Report</title>
 
 <link rel="icon" href="favicon.png" type="image/png">
 
@@ -53,7 +53,7 @@
 </head>
 <body>
 <h1 class="main-header">
-    <img src="logo.png" >PLAT B Clash Test Report (2663)</h1>
+    <img src="logo.png" >PLOT B Clash Test Report (2663)</h1>
 <style>
     .main-header {
         text-align: center;
